fixed gap between red boxes

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ a:hover {
     height: 103px;
     width: 344px; 
     position: absolute;
-    right: 40px;
+    right: 42px;
     top: 71px;
 }
 #home-slide1 .red-boxTwo p {
